--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -4,7 +4,7 @@
     width: calc(100% - 150px);
     position: initial;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
 
     .portfolio-header {
         display: flex;
